fix: fix footnote wrapping

--- a/src/app/blogs/[slug]/mdx.css
+++ b/src/app/blogs/[slug]/mdx.css
@@ -462,3 +462,7 @@
     @apply overflow-x-auto;
   }
 }
+
+.footnotes ol > li > p {
+  @apply inline-flex items-center;
+}
